--- a/DRRadio/res/values/strings.xml
+++ b/DRRadio/res/values/strings.xml
@@ -8,15 +8,19 @@
   <string-array name="lydformat_tekst">
 		<item>AAC (RTSP)</item>
 		<item>MP3 (Shoutcast)</item>
+<!-- DRs HLS-format kan desværre ikke spilles
 		<item>AAC (HLS)</item>
 		<item>AAC (HLS2)</item>
+-->
 	</string-array>
 
 	<string-array name="lydformat_kode">
 		<item>rtsp</item>
 		<item>shoutcast</item>
+<!-- DRs HLS-format kan desværre ikke spilles
 		<item>httplive</item>
 		<item>httplive2</item>
+-->
 	</string-array>
 
   <string-array name="lydkvalitet_tekst">
