--- a/DRRadiov3/res/values/strings.xml
+++ b/DRRadiov3/res/values/strings.xml
@@ -5,6 +5,7 @@
   <string name="navigation_drawer_open">Åbn venstremenu</string>
   <string name="navigation_drawer_close">Luk venstremenu</string>
   <string name="action_settings">Settings</string>
+  <string name="dr_ingen_forbindelse"><b>Ingen forbindelse til DR</b>\nAfventer genopretning af forbindelsen</string>
 
   <string-array name="lydformat_tekst">
     <item>AAC (HLS)</item>
