--- a/appcompat/res/values/strings.xml
+++ b/appcompat/res/values/strings.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The Android Open Source Project
+<?xml version="1.0" encoding="UTF-8"?>
+<!--  Copyright (C) 2012 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -12,37 +12,21 @@
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
--->
+ -->
 
-<resources>
-    <!-- Label for the "Done" button on the far left of action mode toolbars. -->
-    <string name="abc_action_mode_done">Done</string>
-    <!-- Content description for the action bar "home" affordance. [CHAR LIMIT=NONE] -->
-    <string name="abc_action_bar_home_description">Navigate home</string>
-    <!-- Content description for the action bar "up" affordance. [CHAR LIMIT=NONE] -->
-    <string name="abc_action_bar_up_description">Navigate up</string>
-    <!-- Content description for the action menu overflow button. [CHAR LIMIT=NONE] -->
-    <string name="abc_action_menu_overflow_description">More options</string>
-
-    <!-- SearchView accessibility description for search button [CHAR LIMIT=NONE] -->
-    <string name="abc_searchview_description_search">Search</string>
-    <!-- SearchView accessibility description for search text field [CHAR LIMIT=NONE] -->
-    <string name="abc_searchview_description_query">Search query</string>
-    <!-- SearchView accessibility description for clear button [CHAR LIMIT=NONE] -->
-    <string name="abc_searchview_description_clear">Clear query</string>
-    <!-- SearchView accessibility description for submit button [CHAR LIMIT=NONE] -->
-    <string name="abc_searchview_description_submit">Submit query</string>
-    <!-- SearchView accessibility description for voice button [CHAR LIMIT=NONE] -->
-    <string name="abc_searchview_description_voice">Voice search</string>
-
-    <!-- ActivityChooserView - accessibility support -->
-    <!-- Description of the shwoing of a popup window with activities to choose from. [CHAR LIMIT=NONE] -->
-    <string name="abc_activitychooserview_choose_application">Choose an app</string>
-    <!-- Title for a button to expand the list of activities in ActivityChooserView [CHAR LIMIT=25] -->
-    <string name="abc_activity_chooser_view_see_all">See all</string>
-    <!-- Description of a share target (both in the list of such or the default share button) in a ShareActionProvider (share UI). [CHAR LIMIT=NONE] -->
-    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
-    <!-- Description of the choose target button in a ShareActionProvider (share UI). [CHAR LIMIT=NONE] -->
-    <string name="abc_shareactionprovider_share_with">Share with</string>
-
+<resources
+    >
+  <string name="abc_action_mode_done" msgid="4076576682505996667">"Luk"</string>
+  <string name="abc_action_bar_home_description" msgid="4600421777120114993">"Naviger hjem"</string>
+  <string name="abc_action_bar_up_description" msgid="1594238315039666878">"Naviger op"</string>
+  <string name="abc_action_menu_overflow_description" msgid="3588849162933574182">"Flere muligheder"</string>
+  <string name="abc_searchview_description_search" msgid="8264924765203268293">"Søg"</string>
+  <string name="abc_searchview_description_query" msgid="2550479030709304392">"Søgeforespørgsel"</string>
+  <string name="abc_searchview_description_clear" msgid="3691816814315814921">"Ryd forespørgslen"</string>
+  <string name="abc_searchview_description_submit" msgid="8928215447528550784">"Indsend forespørgslen"</string>
+  <string name="abc_searchview_description_voice" msgid="893419373245838918">"Stemmesøgning"</string>
+  <string name="abc_activitychooserview_choose_application" msgid="2031811694353399454">"Vælg en app"</string>
+  <string name="abc_activity_chooser_view_see_all" msgid="7468859129482906941">"Se alle"</string>
+  <string name="abc_shareactionprovider_share_with_application" msgid="7165123711973476752">"Del med %s"</string>
+  <string name="abc_shareactionprovider_share_with" msgid="3421042268587513524">"Del med"</string>
 </resources>
