--- a/DRRadiov3/res/values/strings.xml
+++ b/DRRadiov3/res/values/strings.xml
@@ -6,6 +6,39 @@
   <string name="navigation_drawer_close">Luk venstremenu</string>
   <string name="action_settings">Settings</string>
   <string name="dr_ingen_forbindelse"><b>Manglende netværksforbindelse</b>\nAfventer genopretning af forbindelsen</string>
+  <string name="afspiller">afspiller</string>
+  <string name="Søg">Søg</string>
+  <string name="Del">Del</string>
+  <string name="Dine_favoritprogrammer">Dine favoritprogrammer</string>
+  <string name="Downloadede_udsendelser_">Downloadede udsendelser</string>
+  <string name="Søg_efter_program">Søg efter program</string>
+  <string name="Senest_lyttede">Senest lyttede</string>
+  <string name="Om_D_R_Radio">Om D R Radio</string>
+  <string name="Om_DR_Radio">Om DR Radio</string>
+  <string name="Skriv_meddelelse_til_DR">Skriv meddelelse til DR</string>
+  <string name="Skriv_meddelelse_til_D_R">Skriv meddelelse til D R</string>
+  <string name="start_stop">start/stop</string>
+  <string name="Luk_D_R_Radio">Luk D R Radio</string>
+  <string name="PLAYLISTE">PLAYLISTE</string>
+  <string name="INDSLAG">INDSLAG</string>
+  <string name="indslag">indslag</string>
+  <string name="DOWNLOAD">DOWNLOAD</string>
+  <string name="playliste">playliste</string>
+  <string name="Start">Start</string>
+  <string name="D_R">D R</string>
+  <string name="hent_udsendelse">hent udsendelse</string>
+  <string name="Indlæser__vent_venligst___">Indlæser, vent venligst...</string>
+  <string name="INFO">INFO</string>
+  <string name="info">info</string>
+  <string name="favorit">favorit</string>
+  <string name="FAVORIT">FAVORIT</string>
+  <string name="Her_kan_du_altid_høre_den_seneste_radioavis_og_sportsnyt">Her kan du altid høre den seneste radioavis og sportsnyt</string>
+  <string name="_HØR_UDSENDELSE_">HØR UDSENDELSE</string>
+  <string name="OK">OK</string>
+  <string name="pause">pause</string>
+  <string name="DR_kan_ikke_garantere_mod_tekniske_problemer__vækning">DR kan ikke garantere mod tekniske problemer i forbindelse med vækning</string>
+  <string name="Kan_endnu_ikke_afspilles">Kan endnu\nikke afspilles</string>
+  <string name="hør_udsendelse">hør udsendelse</string>
 
   <string-array name="lydformat_tekst">
     <item>AAC (HLS)</item>
